--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Madalin Cars Multiplayer</title>
+    <title>Test Page - ButterDogCo</title>
 	<meta name="description" content="" />
 	<link rel="canonical" href="https://www.madalingames.com/madalin-cars-multiplayer/" />
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="shortcut icon" href="https://butterdogco.com/img/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div id="unity-mobile-warning">
-        WebGL builds are not supported on mobile devices.
+        Sorry, this is not supported on mobile devices.
       </div>
     </div>
     <script>
